cmake_minimum_required(VERSION 3.23)
project(LeetCode)

set(CMAKE_CXX_STANDARD 14)

add_executable(LeetCode src/LC0704.c)

add_executable(LC35 src/LC0035.c)
add_executable(LC27 src/LC0027.c)
add_executable(LC977 src/LC0977.c)
add_executable(LC209 src/LC0209.c)
add_executable(LC12 src/LC0012.c)
add_executable(LC59 src/LC0059.c)
add_executable(LC509 src/LC0509.c)
add_executable(LC70 src/LC0070.c)
add_executable(LC746 src/LC0746.c)
add_executable(LC62 src/LC0062.c)
add_executable(LC63 src/LC0063.c)
add_executable(LC1475 src/LC1475.c)
add_executable(LC0870 src/LC0870.c)